[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "opendsb"
dynamic = ["version"]
description = 'OpenDSB Client'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Rafael Soares", email = "rsoares@peq.coppe.ufrj.br" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "websocket-client>=1.5.2",
]
